# ik_tasiyici

./: .gitignore  AGENT.md  DK_Tutanak_Olusturucu.spec  README.md  demo.py  inspect2.py  inspect3.py  inspect_output.py  inspect_template.py  pyproject.toml
.github/workflows/: build.yml
docs/: 2026 yılı işe başlayan güncel V2.xlsx  cikti_ornegi.xlsx  cikti_taslagi.xlsx  cikti_taslagi_dolu.xlsx  coklu_girdi.xlsx  mezuniyet_bilgileri.xlsx  taslak.xlsx  taslak_dolu.xlsx
scripts/: build.py  release.py
src/: __init__.py  main.py
src/config/: __init__.py  constants.py  dk_table.py
src/core/: __init__.py  education_importer.py  excel_reader.py  excel_write_strategy.py  excel_write_strategy_v1.py  excel_writer.py  excel_writer_factory.py  formula_builder.py  validators.py
src/gui/: __init__.py  education_import_service.py  education_import_window.py  file_selection_widget.py  log_widget.py  main_menu_window.py  main_window.py  settings_manager.py  style.qss  tutanak_service.py  tutanak_window.py
tests/: test_dk_calculation.py  test_education_import_window.py  test_education_importer.py  test_excel_reader.py  test_excel_write_strategy.py  test_excel_writer.py  test_formula_builder.py  test_kademe_formulleri.py  test_log_widget.py  test_main.py  test_main_menu_window.py  test_main_window.py  test_settings_manager.py  test_tutanak_service.py  test_tutanak_window.py  test_validators.py
